--- a/home.html
+++ b/home.html
@@ -75,7 +75,7 @@
                             <div class="text-dark p-4 p-md-5">
                                 <h2 class="fw-bold text-dark mb-3"><strong>Men Collection</strong></h2>
                                 <p class="mb-4">We provide to you best quality products for you</p>
-                                <div class="my-3"><a class="btn  btn-lg me-2" role="button" href="men.html" style="background:#87CBB9 ;">Goto Collection</a></div>
+                                <div class="my-3"><a class="btn  btn-lg me-2" role="button" href="men.php" style="background:#87CBB9 ;">Goto Collection</a></div>
                             </div>
                         </div>
                         <div class="col-md-6 order-first order-md-last" style="min-height: 250px;"><img class="w-100 h-100 fit-cover" src="src_images/men.jpg"></div>
