--- a/home.html
+++ b/home.html
@@ -44,8 +44,8 @@
         <button class="navbar-toggler" data-toggle="collapse" data-target="#nav_tings"><span class="navbar-toggler-icon"></span></button>
         <div class="collapse navbar-collapse " id="nav_tings">
             <ul class="navbar-nav">
-                <li class="nav-item"><a href="#"class="nav-link active">Home</a></li>
-                <li class="nav-item"><a href="#" class="nav-link">Categories</a></li>
+                <li class="nav-item"><a href="home.html" class="nav-link active">Home</a></li>
+                <li class="nav-item"><a href="#link-to-category" class="nav-link">Categories</a></li>
                 <li class="nav-item"><a href="#" class="nav-link">Cart</a></li>
                 <li class="nav-item"><a href="#" class="nav-link">Customize Products</a></li>
                 <li class="nav-item"><a href="#" class="nav-link">Wishlist</a></li>
@@ -66,7 +66,7 @@
         </div> 
     </div>
 
-    <div id="link-to-food">
+    <div id="link-to-category">
         <section class="py-4 py-xl-5">
             <div class="container">
                 <div class="bg-light border rounded border-0 border-dark overflow-hidden">
@@ -85,7 +85,7 @@
         </section>
     </div>
 
-    <div id="link-to-restaurant">
+    <div id="link-to-category">
         <section class="py-4 py-xl-5">
             <div class="container">
                 <div class="bg-light border rounded border-0 border-dark overflow-hidden">
@@ -95,7 +95,7 @@
                             <div class="text-dark p-4 p-md-5">
                                 <h2 class="fw-bold text-dark mb-3"><strong>Women Collections</strong></h2>
                                 <p class="mb-4">We provide to you best quality products for you</p>
-                                <div class="my-3"><a class="btn btn-lg me-2" role="button" href="women.html" style="background:#87CBB9;"><span style="color: var(--bs-btn-hover-color);">Goto Collection</span></a></div>
+                                <div class="my-3"><a class="btn btn-lg me-2" role="button" href="women.php" style="background:#87CBB9;"><span style="color: var(--bs-btn-hover-color);">Goto Collection</span></a></div>
                             </div>
                         </div>
                     </div>
