--- a/chatbot.html
+++ b/chatbot.html
@@ -20,8 +20,8 @@
 }
 .container {
   --light-color: #fff;
-  height: 420px;
-  width: 400px;
+  height: 520px;
+  width: 480px;
   background: var(--light-color);
   position: fixed;
   bottom: 50px;
@@ -52,7 +52,7 @@
   padding-left: 10px;
 }
 .chat-body {
-  height: 300px;
+  height: 400px;
   display: flex;
   flex-direction: column;
   padding: 8px 10px;
@@ -62,7 +62,7 @@
 }
 
 .chat-input {
-  height: 60px;
+  height: 48px;
   display: flex;
   align-items: center;
   border-top: 1px solid #ccc;
@@ -92,6 +92,7 @@
   border-radius: 10px 3px 10px 10px;
 }
 .user-message{
+  margin-top: 30px;
 	transform: translate(1%);
   align-self: flex-end;
 }
